--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "json-server": "json-server --watch db.json --port 4000"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "json-server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
@@ -34,6 +34,7 @@
     "globals": "^16.4.0",
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.6"
   }
